--- a/permanent.html
+++ b/permanent.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
  <meta name="robots" content="noindex nofollow" />
-<title>myStylist</title>
+<title>Permanent makeup</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -52,52 +52,72 @@
 
 	
 
-<main>
   <div class="wrapper">
-	  
-	  
     <section class=hero>
 		<img class="heroimg" src="billeder/random.jpg" alt="Bryllupsbillede">
 		<article class="overlay"></article>
 		<aricle class="herotxt" >
-			<h1>Makeupkursus der passer specielt til dig</h1>
-			<a class=kurserknap href="kurser.html"> Se mere</a>
+			<h1> Permanent makeup</h1>
 		</aricle>
+	</section>
+	
+	
+	<section class="pakkeA">
+		<article class="pakkebeskrivelser">
+		<h3>Fillerina behandling</h3>
+			<p>ANTI-AGE
+				Fillerina er den første dermokosmetisk filler 
+				bestående af molekyler fra 6 forskellige 
+				hyaluronsyrer. Fillerina er den første filler, 
+				der anvendes på huden og ikke injiceres i 
+				huden.
+		</p>
+		<ul> 
+
+				<li>Rynke reduktion</li>
+				<li>Ultimativ fugt boost til huden</li>
+		</ul>
+		<p>
+				Ved køb af din serum med sparer du 50% på 
+				din behandling. Behandlingen er en god 
+				måde at teste produktets effekt på.
+
+		</p>
 		
+		<p>Tid: 30 min. </p>
+		</article>
+		<article class="pakkepris">
+			<h3>250,-</h3>
+		</article>
+	</section>
+		<section class="pakkeB">
+		<article class="pakkebeskrivelser">
+				<h3>Klassisk ansigtsbehandling</h3>
+				<p>Daglig vedligeholdelse
+				Den klassiske til alle hudtyper
+				Denne behandling er til dig der generelt er god til at behandle egen hud, dig der giver den hvad den har brug for. Vi sørger for, at optimere og gennemgå huden. 
+			</p>
+			<ul> 
+				<li>Afrens </li>
+				<li>Peeling</li>
+				<li>Dybderens</li>
+				<li>Kort ansigtsmassage</li>
+				<li>Maske</li>
+				<li>Afsluttende crempleje</li>
+			</ul>
+		  <p>Tid: 45 min. </p>
+
+	  	</article>
+		<article class="pakkepris">
+			<h3>495,-</h3>
+		</article>
 	</section>
 	  
 	  
-    <section class="covidbox">
-      <h2>covid</h2>
-      <p>nd sdj Fneæknfkwe fpoe wodzowi efod wefiowe fo iewoif owei foi weoif oewi ofæi ewoi fowei foie foie ifoe ifieif ei foi pif eå  foe</p>
-      <article class="covidbillede"> </article>
-    </section >
-    <section class="volkommenbox">
-      <h2>Velkommen</h2>
-      <p>nd sdj Fneæknfkwe fpoe wodzowi efod wefiowe fo iewoif owei foi weoif oewi ofæi ewoi fowei foie foie ifoe ifieif ei foi pif eå  foe</p>
-      <article class="volkommenbillede"> </article>
-    </section>
-    <section class="reviews">
-      <h2>hvad siger andre</h2>
-      <article class="review-1">
-        <h3>Hanne</h3>
-        <p> Jeg kommer tit til behandling hos Adrijana og har gjort det over flere år. Det er altid en god oplevelse med gode resultater og Adrijana har et humør der smitter af på en hver gange.</p>
-      </article>
-      <article class="review-2">
-        <h3>Hanne</h3>
-        <p> Jeg kommer tit til behandling hos Adrijana og har gjort det over flere år. Det er altid en god oplevelse med gode resultater og Adrijana har et humør der smitter af på en hver gange.</p>
-      </article>
-      <article class="review-3">
-        <h3>Hanne</h3>
-        <p> Jeg kommer tit til behandling hos Adrijana og har gjort det over flere år. Det er altid en god oplevelse med gode resultater og Adrijana har et humør der smitter af på en hver gange.</p>
-      </article>
-      <article class="review-4">
-        <h3>Hanne</h3>
-        <p> Jeg kommer tit til behandling hos Adrijana og har gjort det over flere år. Det er altid en god oplevelse med gode resultater og Adrijana har et humør der smitter af på en hver gange.</p>
-      </article>
-    </section>
-  </div>
-</main>
+	 
+	  
+	
+	</div>
 <footer>
   <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: XXXXXXXX</p>
 </footer>
