permanent make up side tilføjet

--- a/permanent.html
+++ b/permanent.html
@@ -62,57 +62,79 @@
 	</section>
 	
 	
-	<section class="pakkeA">
+	<section class="pakkec">
 		<article class="pakkebeskrivelser">
-		<h3>Fillerina behandling</h3>
+		<h3>3D Bryn</h3>
 			<p>ANTI-AGE
-				Fillerina er den første dermokosmetisk filler 
-				bestående af molekyler fra 6 forskellige 
-				hyaluronsyrer. Fillerina er den første filler, 
-				der anvendes på huden og ikke injiceres i 
-				huden.
-		</p>
-		<ul> 
+				Bryn 3D er den smukkeste teknik der bruges til at optegne de mest naturlige bryn med. </p>
 
-				<li>Rynke reduktion</li>
-				<li>Ultimativ fugt boost til huden</li>
-		</ul>
-		<p>
-				Ved køb af din serum med sparer du 50% på 
-				din behandling. Behandlingen er en god 
-				måde at teste produktets effekt på.
-
+				<p>
+			3D er det tætteste man kan komme på et naturligt look. 
 		</p>
-		
-		<p>Tid: 30 min. </p>
+	
 		</article>
 		<article class="pakkepris">
-			<h3>250,-</h3>
+			<p>Nye bryn inkl. 1. opfølgning</p>
+			<h3>3800,-</h3>
+			<p>Opfølgning </p>
+			<h3>1395,-</h3>
 		</article>
 	</section>
-		<section class="pakkeB">
-		<article class="pakkebeskrivelser">
-				<h3>Klassisk ansigtsbehandling</h3>
-				<p>Daglig vedligeholdelse
-				Den klassiske til alle hudtyper
-				Denne behandling er til dig der generelt er god til at behandle egen hud, dig der giver den hvad den har brug for. Vi sørger for, at optimere og gennemgå huden. 
+		<section class="pakked">
+		<article class="pakkebeskrivelser" id="eyelinerbeskrivelser">
+				<h3>Permanent eyeliner</h3>
+				<p>Eyeliner er den tynde streg omkring vippekanten.
+Eyeliner fremhæver ethvert øje, om der skal være liner både over og under bør du tale med din Permanent Makeup artist om, det er ikke altid fordelagtigt, snare tværtimod. 
 			</p>
-			<ul> 
-				<li>Afrens </li>
-				<li>Peeling</li>
-				<li>Dybderens</li>
-				<li>Kort ansigtsmassage</li>
-				<li>Maske</li>
-				<li>Afsluttende crempleje</li>
-			</ul>
-		  <p>Tid: 45 min. </p>
+			
+		
 
 	  	</article>
-		<article class="pakkepris">
-			<h3>495,-</h3>
-		</article>
+		
+			
+			<article id="eyelinepris1">
+			<p>Øvre eller nedre
+					inkl. 1. opfølgning</p>
+			<h3>3800,-</h3>
+			<p>Opfølgning </p>
+			<h3>1395,-</h3>
+			</article>
+			
+			<article id="eyelinepris2">
+			<p>Både øvre og nedre
+			inkl. 1. opfølgning</p>
+			<h3>4200,-</h3>
+			<p>Opfølgning </p>
+			<h3>1895,-</h3>
+			</article>
+		
 	</section>
 	  
+	  
+<section class="permanentbeskrivelse">
+	<h3>Om permanent makeup</h3>
+	<p>
+Permanent Makeup udført med omhu, rigtige og erfarne artister giver de perfekte resultater.
+myStylist artisten har udført Permanent Makeup 10 år, og udfører din egen permanent makeup på brynene. </p> <p>
+Hvis du har været i tvivl om hvordan det ser ud, eller du har set resultater der ikke er i orden, så anbefaler artisten, at du kommer ind til en samtale og på tæt hold, få lov at se hvordan det ser ud live. Derfra kan du selv dømme om du skal have permanent makeup eller ej.
+	</p> <p>
+Permanent makeup er til for, at bibeholde egne træk og kontour, derfor bruger vi en del tid på at optegne dine bryn og eyeliner korrekt inden vi begynder på noget permanent.
+	</p> <p>
+Alle streger og farve gennemgås med dig, og efter godkendelse af dette, udføres permanent makeuppen.
+</p> <p>
+HOLDBARHED:
+Permanent makeup både på eyeliner og bryn holder fra 8-18 måneder før man føler behov for en opfølgning. 
+</p> <p>
+Nogen holder ganske enkelt længere tid på farverne end andre, og derfor er der ikke to ens resultater. 
+</p> <p>
+FARVER & PRODUKTER
+Vi bruger LCN organiske linie i farver. Linien har utallige farver og det giver mulighed for at give dig, de mest naturlige bryn og ønskede eyeliner.
+</p> <p>
+OPFØLGNINGER
+Opfølgning indbefatter en enkel optegning, der er ikke opfølgende behandling på en opfølgning.
+</p>
+	  
+ </section>
 	  
 	 
 	  
