tilføjer sidste sider
inklusiv rettelser på andre sider

--- a/bryllup.html
+++ b/bryllup.html
@@ -6,7 +6,10 @@
 <title>Bryllup</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
 </head>
+
 <body>
 <header>
   <section class="logo"> </section>
@@ -20,123 +23,100 @@
   <section class="book"> </section>
 </header>
 <nav>
-	
   <div class="styling-drop">
     <button class="dropknap1" onclick="styleFunction()">Styling <i class="fa fa-caret-down"></i> </button>
-    <div class="indhold" id="styleDropdown"> 
-		<a href="#">Bryllupsstyling</a> 
-		<a href="#">Styling af hår og makeup</a> 
-	 </div>
+    <div class="indhold" id="styleDropdown"> <a href="bryllup.html">Bryllupsstyling</a> <a href="styling-har.html">Styling af hår og makeup</a> </div>
   </div>
-	
   <div class="behandling-drop">
     <button class="dropknap2" onclick="behandlingFunction()">Behandlinger <i class="fa fa-caret-down"></i> </button>
-    <div class="indhold" id="behandlingDropdown">
-		<a href="#">Ansigtsbehandlinger</a> 
-		<a href="#">Skræddersyet hudpleje</a> 
-		<a href="#">Manicure & pedicure</a>
-		<a href="#">Bryn & vipper</a>
-		<a href="#">Voks</a>
-		<a href="#">Permanent makeup</a>
-		<a href="#">Kropsbehandlinger</a>
-	</div>
+    <div class="indhold" id="behandlingDropdown"> <a href="ansigtsbehandlinger.html">Ansigtsbehandlinger</a> <a href="hudpleje.html">Skræddersyet hudpleje</a> <a href="manicure.html">Manicure & pedicure</a> <a href="bryn.html">Bryn & vipper</a> <a href="voks.html">Voks</a> <a href="permanent.html">Permanent makeup</a> <a href="kropsbehandlinger.html">Kropsbehandlinger</a> </div>
   </div>
-	
-  	<a href="#home">Kurser</a> 
-	<a href="#news">Om</a> 
-	<a href="#news">Shop</a> 
-	<a href="#news">Kontakt</a> 
-
-	</nav>
-
-	
-
+  <a href="kurser.html">Kurser</a> <a href="om.html">Om</a> <a href="shop.html">Shop</a> <a href="kontakt.html">Kontakt</a> </nav>
 <main>
   <div class="wrapper">
-    <section class=hero>
-		<img class="heroimg" src="billeder/random.jpg" alt="Bryllupsbillede">
-		<article class="overlay"></article>
-		<aricle class="herotxt" >
-			<h1> Hår og makeup til bruden</h1>
-		</aricle>
-	</section>
-	
-	
-	<section class="pakke1">
-		<h3>Eventyrlig</h3>
-		<p>Dit hår og makeup skal være skudsikkert. Det skal fotografere korrekt og holde natten lang. Med denne basis pakke får du sat hår og makeup så du kan se perfekt ud på din store dag </p>
-		<ul>
-		<li><i class="fa fa-check"></i> Hår og makeup</li>
-		<li class="uncheck"><i class="fa fa-times"></i> Ansigtsbehandling</li>
-		<li class="uncheck"><i class="fa fa-times"></i> Shellac</li>
-		<li class="uncheck"><i class="fa fa-times"></i> Manicure</li>
-		<li class="uncheck"><i class="fa fa-times"></i> lash lift</li>
-		</ul>
-		<h3>2699,-</h3>
-	</section>
-	
-	<section class="pakke2">
-		<h3>Rød løber</h3>
-		<p>Hudplejen er ekstrem vigtig før makeup, en sund og ren hud udløser en fantastisk glow, huden oser af sundhed, skønhed og yderst frisk. Makeup binder langt bedre på en velplejet hud, udføres på dagen.</p>
-		<ul>
-		<li><i class="fa fa-check"></i> Hår og makeup</li>
-		<li><i class="fa fa-check"></i> Ansigtsbehandling</li>
-		<li class="uncheck"><i class="fa fa-times"></i> Shellac</li>
-		<li class="uncheck"><i class="fa fa-times"></i> Manicure</li>
-		<li class="uncheck"><i class="fa fa-times"></i> lash lift</li>
-		</ul>
-		<h3>3399,-</h3>
-	</section>
-	
-		<section class="pakke3">
-		<h3>Vip Bruden</h3>
-		<p>Vil du have den fulde følelse af at blive behandling som en stjerne, så skal du booke denne pakke. Behandlinger udføres før dit bryllup og hår og makeup styles på dagen. </p>
-
-		<ul>
-		<li><i class="fa fa-check"></i> Hår og makeup</li>
-		<li><i class="fa fa-check"></i> Ansigtsbehandling</li>
-		<li><i class="fa fa-check"></i> Shellac</li>
-		<li><i class="fa fa-check"></i> Manicure</li>
-		<li><i class="fa fa-check"></i> lash lift</li>
-		</ul>
-		<h3>4499,-</h3>
-	</section>
+    <section class=hero> <img class="heroimg" src="billeder/random.jpg" alt="Bryllupsbillede">
+      <article class="overlay"></article>
+      <aricle class="herotxt" >
+        <h1> Hår og makeup til bruden</h1>
+      </aricle>
+    </section>
+    <section class="pakke1">
+      <h3>Eventyrlig</h3>
+      <p>Dit hår og makeup skal være skudsikkert. Det skal fotografere korrekt og holde natten lang. Med denne basis pakke får du sat hår og makeup så du kan se perfekt ud på din store dag </p>
+      <ul>
+        <li><i class="fa fa-check"></i> Hår og makeup</li>
+        <li class="uncheck"><i class="fa fa-times"></i> Ansigtsbehandling</li>
+        <li class="uncheck"><i class="fa fa-times"></i> Shellac</li>
+        <li class="uncheck"><i class="fa fa-times"></i> Manicure</li>
+        <li class="uncheck"><i class="fa fa-times"></i> lash lift</li>
+      </ul>
+      <h3 class="pris">2699,-</h3>
+    </section>
+    <section class="pakke2">
+      <h3>Rød løber</h3>
+      <p>Hudplejen er ekstrem vigtig før makeup, en sund og ren hud udløser en fantastisk glow, huden oser af sundhed, skønhed og yderst frisk. Makeup binder langt bedre på en velplejet hud, udføres på dagen.</p>
+      <ul>
+        <li><i class="fa fa-check"></i> Hår og makeup</li>
+        <li><i class="fa fa-check"></i> Ansigtsbehandling</li>
+        <li class="uncheck"><i class="fa fa-times"></i> Shellac</li>
+        <li class="uncheck"><i class="fa fa-times"></i> Manicure</li>
+        <li class="uncheck"><i class="fa fa-times"></i> lash lift</li>
+      </ul>
+      <h3 class="pris">3399,-</h3>
+    </section>
+    <section class="pakke3">
+      <h3>Vip Bruden</h3>
+      <p>Vil du have den fulde følelse af at blive behandling som en stjerne, så skal du booke denne pakke. Behandlinger udføres før dit bryllup og hår og makeup styles på dagen. </p>
+      <ul>
+        <li><i class="fa fa-check"></i> Hår og makeup</li>
+        <li><i class="fa fa-check"></i> Ansigtsbehandling</li>
+        <li><i class="fa fa-check"></i> Shellac</li>
+        <li><i class="fa fa-check"></i> Manicure</li>
+        <li><i class="fa fa-check"></i> lash lift</li>
+      </ul>
+      <h3 class="pris">4499,-</h3>
+    </section>
+    <section class="info">
+      <h2>For at booke tid, ring til stylisten på </h2>
+      <h2 class="tlf">41363636</h2>
+    </section>
 	  
 	  
-	  <section class="info">
-		  <h2>For at booke tid, ring til stylisten på 41363636</h2>
-	  </section>
 	  
 	  
-	  <section class="priser">
-    	<h3 class="rakke1">Prøvesessioner</h3>
-    	<h3 class="rakke3">Brudepiger</h3>   
-    	<h4 class="rakke1">Hår</h4> 
-     	<h4 class="rakke2">550,-</h4> 
-     	<h4 class="rakke3">Hår</h4> 
-		<h4 class="rakke4">999,-</h4> 
-     	<p class="rakke1">Få sat dit hår som du vil have det på den store dag. Inklusiv et glas bobler og med plads til dine kære der har lyst til at deltage. Foregår i salonen.</p>    
-    	<p class="rakke3">Få sat hår på brudepiger på samme adresse som bruden eller i salonen.</p> 
-		<h4 class="rakke1">Makeup</h4> 
-		<h4 class="rakke2">550,-</h4> 
-		<h4 class="rakke3">Makeup</h4> 
-		<h4 class="rakke4">899,-</h4> 
-		<p class="rakke1">Få lagt din makeup som du vil have det på den store dag. Inklusiv et glas bobler og med plads til dine kære der har lyst til at deltage. Foregår i salonen.</p> 
-		<p class="rakke3">Make up på brudepiger på samme adresse som bruden eller i salonen.</p> 
-		<h4 class="rakke1">Hår og makeup</h4> 
-		<h4 class="rakke2">899,-</h4> 
-		<h4 class="rakke3">Hår og makeup</h4> 
-		<h4 class="rakke4">1599,-</h4> 
-		<p class="rakke1">Både hår og makeup præcis som det skal være på dagen for bryllupet. Inklusiv et glas bobler og med plads til dine kære der har lyst til at deltage. Foregår i salonen.</p> 
-		<h3 class="rakke1">Kørsel</h3> 
-		<h4 class="rakke1">Kørsel Sjælland</h4> 
-		<h4 class="rakke2">550,-</h4> 
-		<p class="rakke1">Kørsel i resten af Danmark er muligt. Pris efter aftale.</p> 
-	  </section>
+    <section class="priser">
+		
+      <h3 class="rakke1">Prøvesessioner</h3>
+      <h4 class="rakke1">Hår</h4>
+      <p class="rakke1">Få sat dit hår som du vil have det på den store dag. Inklusiv et glas bobler og med plads til dine kære der har lyst til at deltage. Foregår i salonen.</p>
+      <h4 class="rakke1">Makeup</h4>
+      <p class="rakke1">Få lagt din makeup som du vil have det på den store dag. Inklusiv et glas bobler og med plads til dine kære der har lyst til at deltage. Foregår i salonen.</p>
+      <h4 class="rakke1">Hår og makeup</h4>
+      <p class="rakke1">Både hår og makeup præcis som det skal være på dagen for bryllupet. Inklusiv et glas bobler og med plads til dine kære der har lyst til at deltage. Foregår i salonen.</p>
+      <p class="rakke1">Kørsel i resten af Danmark er muligt. Pris efter aftale.</p>
+      <h3 class="rakke1">Kørsel</h3>
+      <h4 class="rakke1">Kørsel Sjælland</h4>
+		
+      <h4 class="rakke2">550,-</h4>
+      <h4 class="rakke2">550,-</h4>
+      <h4 class="rakke2">899,-</h4>
+      <h4 class="rakke2">550,-</h4>
+		
+      <h3 class="rakke3">Brudepiger</h3>
+      <h4 class="rakke3">Hår</h4>
+      <p class="rakke3">Få sat hår på brudepiger på samme adresse som bruden eller i salonen.</p>
+      <h4 class="rakke3">Makeup</h4>
+      <p class="rakke3">Make up på brudepiger på samme adresse som bruden eller i salonen.</p>
+      <h4 class="rakke3">Hår og makeup</h4>
+		
+      <h4 class="rakke4">999,-</h4>
+      <h4 class="rakke4">899,-</h4>
+      <h4 class="rakke4">1599,-</h4>
+    </section>
 	  
-	
-	</div>
-	
+	  
+	  
+  </div>
 </main>
 <footer>
   <p> myStylist.dk - Godthåbsvej 177 -2720 Vanløse - tlf: XXXXXXXX</p>
