--- a/manicure.html
+++ b/manicure.html
@@ -6,7 +6,11 @@
 <title>Manicure og pedicure</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
 </head>
+	
+	
 <body>
 <header>
   <section class="logo"> </section>
@@ -19,33 +23,36 @@
   </section>
   <section class="book"> </section>
 </header>
-<nav>
+
+	
+	
+		<nav>
 	
   <div class="styling-drop">
     <button class="dropknap1" onclick="styleFunction()">Styling <i class="fa fa-caret-down"></i> </button>
     <div class="indhold" id="styleDropdown"> 
-		<a href="#">Bryllupsstyling</a> 
-		<a href="#">Styling af hår og makeup</a> 
+		<a href="bryllup.html">Bryllupsstyling</a> 
+		<a href="styling-har.html">Styling af hår og makeup</a> 
 	 </div>
   </div>
 	
   <div class="behandling-drop">
     <button class="dropknap2" onclick="behandlingFunction()">Behandlinger <i class="fa fa-caret-down"></i> </button>
     <div class="indhold" id="behandlingDropdown">
-		<a href="#">Ansigtsbehandlinger</a> 
-		<a href="#">Skræddersyet hudpleje</a> 
-		<a href="#">Manicure & pedicure</a>
-		<a href="#">Bryn & vipper</a>
-		<a href="#">Voks</a>
-		<a href="#">Permanent makeup</a>
-		<a href="#">Kropsbehandlinger</a>
+		<a href="ansigtsbehandlinger.html">Ansigtsbehandlinger</a> 
+		<a href="hudpleje.html">Skræddersyet hudpleje</a> 
+		<a href="manicure.html">Manicure & pedicure</a>
+		<a href="bryn.html">Bryn & vipper</a>
+		<a href="voks.html">Voks</a>
+		<a href="permanent.html">Permanent makeup</a>
+		<a href="kropsbehandlinger.html">Kropsbehandlinger</a>
 	</div>
   </div>
 	
-  	<a href="#home">Kurser</a> 
-	<a href="#news">Om</a> 
-	<a href="#news">Shop</a> 
-	<a href="#news">Kontakt</a> 
+  	<a href="kurser.html">Kurser</a> 
+	<a href="om.html">Om</a> 
+	<a href="shop.html">Shop</a> 
+	<a href="kontakt.html">Kontakt</a> 
 
 	</nav>
 
