--- a/ansigtsbehandlinger.html
+++ b/ansigtsbehandlinger.html
@@ -19,33 +19,36 @@
   </section>
   <section class="book"> </section>
 </header>
-<nav>
+
+	
+	
+		<nav>
 	
   <div class="styling-drop">
     <button class="dropknap1" onclick="styleFunction()">Styling <i class="fa fa-caret-down"></i> </button>
     <div class="indhold" id="styleDropdown"> 
-		<a href="#">Bryllupsstyling</a> 
-		<a href="#">Styling af hår og makeup</a> 
+		<a href="bryllup.html">Bryllupsstyling</a> 
+		<a href="styling-har.html">Styling af hår og makeup</a> 
 	 </div>
   </div>
 	
   <div class="behandling-drop">
     <button class="dropknap2" onclick="behandlingFunction()">Behandlinger <i class="fa fa-caret-down"></i> </button>
     <div class="indhold" id="behandlingDropdown">
-		<a href="#">Ansigtsbehandlinger</a> 
-		<a href="#">Skræddersyet hudpleje</a> 
-		<a href="#">Manicure & pedicure</a>
-		<a href="#">Bryn & vipper</a>
-		<a href="#">Voks</a>
-		<a href="#">Permanent makeup</a>
-		<a href="#">Kropsbehandlinger</a>
+		<a href="ansigtsbehandlinger.html">Ansigtsbehandlinger</a> 
+		<a href="hudpleje.html">Skræddersyet hudpleje</a> 
+		<a href="manicure.html">Manicure & pedicure</a>
+		<a href="bryn.html">Bryn & vipper</a>
+		<a href="voks.html">Voks</a>
+		<a href="permanent.html">Permanent makeup</a>
+		<a href="kropsbehandlinger.html">Kropsbehandlinger</a>
 	</div>
   </div>
 	
-  	<a href="#home">Kurser</a> 
-	<a href="#news">Om</a> 
-	<a href="#news">Shop</a> 
-	<a href="#news">Kontakt</a> 
+  	<a href="kurser.html">Kurser</a> 
+	<a href="om.html">Om</a> 
+	<a href="shop.html">Shop</a> 
+	<a href="kontakt.html">Kontakt</a> 
 
 	</nav>
 
@@ -88,7 +91,9 @@
 		</article>
 		<article class="pakkepris">
 			<h3>250,-</h3>
+			<a class="bookknap" href="#">Book her</a>
 		</article>
+		
 	</section>
 		<section class="pakkeB">
 		<article class="pakkebeskrivelser">
@@ -110,6 +115,7 @@
 	  	</article>
 		<article class="pakkepris">
 			<h3>495,-</h3>
+			<a class="bookknap" href="#">Book her</a>
 		</article>
 	</section>
 	  
@@ -140,6 +146,7 @@
 		</article>
 		<article class="pakkepris">
 			<h3>650,-</h3>
+			<a class="bookknap" href="#">Book her</a>
 		</article>
 	
 	  </section>
@@ -162,6 +169,7 @@
 	  	</article>
 		<article class="pakkepris">
 			<h3>530,-</h3>
+			<a class="bookknap" href="#">Book her</a>
 		</article>
 	</section>
 	  
@@ -203,6 +211,7 @@ huden de har mangel på liv og fugt.
 		</article>
 		<article class="pakkepris">
 			<h3>250,-</h3>
+			<a class="bookknap" href="#">Book her</a>
 		</article>
 	  </section>
 	  
@@ -243,6 +252,7 @@ fornyelse
 		</article>
 		<article class="pakkepris">
 			<h3>650,-</h3>
+			<a class="bookknap" href="#">Book her</a>
 		</article>
 	  </section>
 	
@@ -302,6 +312,7 @@ fornyelse
 		</article>
 		<article class="pakkepris">
 			<h3>830,-</h3>
+			<a class="bookknap" href="#">Book her</a>
 		</article>
 	  </section>
 	  
@@ -348,6 +359,7 @@ fornyelse
 			</article>
 			<article class="pakkepris">
 				<h3>4800,-</h3>
+				<a class="bookknap" href="#">Book her</a>
 			</article>
 		  </section>
 
