--- a/index.html
+++ b/index.html
@@ -2,50 +2,61 @@
 <html>
 <head>
 <meta charset="UTF-8">
- <meta name="robots" content="noindex nofollow" />
+<meta name="robots" content="noindex nofollow" />
 <title>myStylist</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
 </head>
+	
+	
 <body>
 <header>
-  <section class="logo"> </section>
+  <section class="logo">
+	  <a href="index.html">
+		  <img alt="logo" src="billeder/logo.jpg"> </a>
+	</section>
   <section class="search">
     <textarea> </textarea>
   </section>
   <section class="head-icons">
     <a href="#" class="bruger"> <i class="fa fa-user-o" aria-hidden="true"></i></a>
     <a href="#" class="kurv"><i class="fa fa-shopping-basket" aria-hidden="true"></i> </a>
-  </section>
-  <section class="book"> </section>
+ <section class="book">
+	<a class="bookknap" href="#">Book her</a>
+	</section> 
+	</section>
+  
 </header>
-<nav>
+
+	<nav>
 	
   <div class="styling-drop">
     <button class="dropknap1" onclick="styleFunction()">Styling <i class="fa fa-caret-down"></i> </button>
     <div class="indhold" id="styleDropdown"> 
-		<a href="#">Bryllupsstyling</a> 
-		<a href="#">Styling af hår og makeup</a> 
+		<a href="bryllup.html">Bryllupsstyling</a> 
+		<a href="styling-har.html">Styling af hår og makeup</a> 
 	 </div>
   </div>
 	
   <div class="behandling-drop">
     <button class="dropknap2" onclick="behandlingFunction()">Behandlinger <i class="fa fa-caret-down"></i> </button>
     <div class="indhold" id="behandlingDropdown">
-		<a href="#">Ansigtsbehandlinger</a> 
-		<a href="#">Skræddersyet hudpleje</a> 
-		<a href="#">Manicure & pedicure</a>
-		<a href="#">Bryn & vipper</a>
-		<a href="#">Voks</a>
-		<a href="#">Permanent makeup</a>
-		<a href="#">Kropsbehandlinger</a>
+		<a href="ansigtsbehandlinger.html">Ansigtsbehandlinger</a> 
+		<a href="hudpleje.html">Skræddersyet hudpleje</a> 
+		<a href="manicure.html">Manicure & pedicure</a>
+		<a href="bryn.html">Bryn & vipper</a>
+		<a href="voks.html">Voks</a>
+		<a href="permanent.html">Permanent makeup</a>
+		<a href="kropsbehandlinger.html">Kropsbehandlinger</a>
 	</div>
   </div>
 	
-  	<a href="#home">Kurser</a> 
-	<a href="#news">Om</a> 
-	<a href="#news">Shop</a> 
-	<a href="#news">Kontakt</a> 
+  	<a href="kurser.html">Kurser</a> 
+	<a href="om.html">Om</a> 
+	<a href="shop.html">Shop</a> 
+	<a href="kontakt.html">Kontakt</a> 
 
 	</nav>
 
@@ -68,33 +79,68 @@
 	  
 	  
     <section class="covidbox">
-      <h2>covid</h2>
-      <p>nd sdj Fneæknfkwe fpoe wodzowi efod wefiowe fo iewoif owei foi weoif oewi ofæi ewoi fowei foie foie ifoe ifieif ei foi pif eå  foe</p>
+      <h2>Covid-19 information</h2>
+       <h4>Klinikken er åben igen</h4>
+		<p>
+		D. 20 April fik vi lov, at åbne op for behandlinger igen.
+		Vi glæder os derfor til at møde dig eller til et gensyn. 
+		</p> 
+		
+		<h4> Dette skal du læse inden din behandling</h4><p>
+		Da klinikkens entre både er beregnet som venteværelse, for dem der skal ind til behandling, men også til produktsalg. Håber vi at du tilpasser din tid, sådan at du højst er der 
+		15 minutter før din behandling starter.
+		</p> 
+		
+		<h4> Vi har taget vores forbehold</h4><p>
+		Vores behandlings briks er beklædt med blid plast, som skiftes mellem hver kunde. Dun behandler er iført maske og handsker, som på billedet eller til at finde bag Visir eller glas.</p>
       <article class="covidbillede"> </article>
     </section >
     <section class="volkommenbox">
-      <h2>Velkommen</h2>
-      <p>nd sdj Fneæknfkwe fpoe wodzowi efod wefiowe fo iewoif owei foi weoif oewi ofæi ewoi fowei foie foie ifoe ifieif ei foi pif eå  foe</p>
+      <h2>Velkommen til en verden af skønhed</h2>
+      <p>MyStylist er en lille oase fyldt med god stemning og skønhed. Vi tilbyder en bred vifte af behandlinger, så der er til enhver smag.
+		</p>
+		<p>
+
+	Mystylist er bygget op på 20 års erfaring, indenfor mode og skønhedsbranchen. 
+</p>
+		<p>
+	En af vores vinderbehandlinger er CND shellac, som holder i op til to uger. Hos os kan du vælge mellem, over hundrede forskellige farver. 
+</p>
+		<p>
+	Er du mest til franskmanicure, laver vi også gerne det. Helt uden Ekstra gebyr.
+</p>
+		<p>
+	Book din tid under behandlinger, eller ring på tlf;
+	</p>
+		<p class="tlf">41 36 36 36</p>
       <article class="volkommenbillede"> </article>
     </section>
     <section class="reviews">
-      <h2>hvad siger andre</h2>
+      <h2>Andre kunder siger</h2>
       <article class="review-1">
-        <h3>Hanne</h3>
-        <p> Jeg kommer tit til behandling hos Adrijana og har gjort det over flere år. Det er altid en god oplevelse med gode resultater og Adrijana har et humør der smitter af på en hver gange.</p>
+        <h3>Mie Pilsgaard</h3>
+        <p>Det var første gang at jeg prøvede lash lift incl farve og ‘botox-kur’.
+Det var en behagelig oplevelse og en god service med en masse info.
+Jeg kommer helt sikkert igen når det bliver tid igen, så kan varmt anbefalde mystylist.p>
       </article>
       <article class="review-2">
-        <h3>Hanne</h3>
-        <p> Jeg kommer tit til behandling hos Adrijana og har gjort det over flere år. Det er altid en god oplevelse med gode resultater og Adrijana har et humør der smitter af på en hver gange.</p>
+        <h3>Margit Riber</h3>
+        <p> Tak for luksus ansigtsbehandling og forkælelse igår. Halvanden time med fokus på mig og totalt velvære. Jeg kommer igen</p>
       </article>
       <article class="review-3">
-        <h3>Hanne</h3>
-        <p> Jeg kommer tit til behandling hos Adrijana og har gjort det over flere år. Det er altid en god oplevelse med gode resultater og Adrijana har et humør der smitter af på en hver gange.</p>
+		  <h3>Lone Jørgensen</h3>
+		  <p>Jeg har både fået massage og ansigtsbehandling hos MyStylist. Jeg kan varmt anbefale stedet, meget dygtige og profesionelle.</p>
       </article>
       <article class="review-4">
-        <h3>Hanne</h3>
-        <p> Jeg kommer tit til behandling hos Adrijana og har gjort det over flere år. Det er altid en god oplevelse med gode resultater og Adrijana har et humør der smitter af på en hver gange.</p>
+        <h3>Katharina Andersen</h3>
+        <p> Fantastisk sted! Jeg er mere end tilfreds med resultatet af mine vipper!
+Professionel, behagelig og afslappende tilgang, hvor mine forventninger blev afstemt med forskellige behandlinger og vi blev enige om hvilken behandling passede bedst til mig som person og mit ønskede resultat!
+Kan varmt anbefales!
+</p>
       </article>
+		
+		  <p class="mereinfo">Er du interesseret i at læse flere anmeldelser, eller vil du måske selv skrive om din oplevelse hos MyStylist.
+Så gå ind på vores <a class="link" href="https://www.facebook.com/myStylist.stylist">facebook</a> side, eller slå os op på <a class="link" href="https://dk.trustpilot.com/review/www.mystylist.dk">trustpilot.</a> </p>
     </section>
   </div>
 </main>
