--- a/shop.html
+++ b/shop.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="robots" content="noindex nofollow" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Shop</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -65,7 +66,17 @@
 <main>
 	<div class="wrapper">
 	
-	
+		   <section class=hero>
+		<img class="heroimg" src="billeder/kropsbehandlinger.png" alt="shop billede">
+		<article class="overlay"></article>
+		<aricle class="herotxt" >
+			<h1>Shop</h1>
+		</aricle>
+	</section>
+		
+		<section class="shop">
+		<h2>Coming soon....</h2>
+	</section>
 		</div>
 </main>
 <footer>
