--- a/styling-har.html
+++ b/styling-har.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="robots" content="noindex nofollow" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Styling Hår og makeup</title>
 <link href="styles.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
