--- a/hudpleje.html
+++ b/hudpleje.html
@@ -69,7 +69,7 @@
 		<img class="heroimg" src="billeder/hudpleje.png" alt="billede af hudpleje">
 		<article class="overlay"></article>
 		<aricle class="herotxt" >
-			<h1> Skrædersyet hudpleje</h1>
+			<h1> Skræddersyet hudpleje</h1>
 		</aricle>
 	</section>
 	
@@ -94,6 +94,7 @@
 				</article>
 	<article class="pakkepris">
 		<h3 class="pris">795,-</h3>
+		<a class="bookknap" href="#">Book her</a>
 		</article>
 	</section>
 	
@@ -115,12 +116,14 @@
 		</ul>
 			
 			<p>Tid 75 min.</p>
+			
 		<ul>
 		
 		</ul>
 				</article>
 	<article class="pakkepris">
 		<h3 class="pris">1095,-</h3>
+		<a class="bookknap" href="#">Book her</a>
 		</article>
 	</section>
 	
@@ -137,6 +140,7 @@
 			</article>
 	<article class="pakkepris">
 		<h3 class="pris">1295,-</h3>
+		<a class="bookknap" href="#">Book her</a>
 			</article>
 	</section>
 	  
