--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header>
   <section class="logo">
 	  <a href="index.html">
-		  <img alt="logo" src="billeder/logo.jpg"> </a>
+		  <img class="logoimg" alt="logo" src="billeder/logo.jpg"> </a>
 	</section>
  
   <section class="head-icons">
@@ -72,11 +72,11 @@
 		<img class="heroimg" src="billeder/forside.png" alt="makeup">
 		<article class="overlay"></article>
 		<aricle class="herotxt" >
-			<h1>Makeupkursus der passer specielt til dig</h1>
-			<a class=kurserknap href="kurser.html"> Se mere</a>
-		</aricle>
+			<h1>Makeupkursus specielt til dig</h1>
+			
 		
-	</section>
+		<a class=kurserknap href="kurser.html"> Se mere</a>
+	</section></aricle>
 	  
 	  
     <section class="covidbox">
