--- a/kropsbehandlinger.html
+++ b/kropsbehandlinger.html
@@ -68,7 +68,7 @@
 		<img class="heroimg" src="billeder/kropsbehandlinger.png" alt="billede af sten">
 		<article class="overlay"></article>
 		<aricle class="herotxt" >
-			<h1>Voks</h1>
+			<h1>Kropsbehandlinger</h1>
 		</aricle>
 	</section>
 	
@@ -84,6 +84,7 @@ Der bruges opvarmede sten til at massere dybdegående, og er langt mere effektiv
 		</article>
 		<article class="pakkepris">
 			<h3>250,-</h3>
+			<a class="bookknap" href="#">Book her</a>
 		</article>
 	</section>
 		
@@ -98,6 +99,7 @@ Der bruges opvarmede sten til at massere dybdegående, og er langt mere effektiv
 	  	</article>
 		<article class="pakkepris">
 			<h3>550,-</h3>
+			<a class="bookknap" href="#">Book her</a>
 		</article>
 	</section>
 		
