--- a/kurser.html
+++ b/kurser.html
@@ -69,13 +69,13 @@
 		<img class="heroimg" src="billeder/kurser.png" alt="Bryllupsbillede">
 		<article class="Makeup børster"></article>
 		<aricle class="herotxt" >
-			<h1> Kurser</h1>
+			<h1> Online makeupkurser</h1>
 		</aricle>
 	</section>
 	  
 	  
 	  <section class="kursusbeskrivelse">
-	  <h4>Lær at lægge makeup af en proffesionel </h4>
+	  <h4>Lær at lægge makeup af en proffesionel - Hjemmefra </h4>
 	<p>Reklamer, shows, magasiner, events, reklamefilm, bryllupper gallafester m.m.
 		myStylist artisten har prøvet det hele og mere til. </p><p>
 
