--- a/styling-har.html
+++ b/styling-har.html
@@ -139,7 +139,10 @@
 </section>
 	
 	
-<section class="info"> <a class="bookknap" href="#">Book her</a> </section>
+ <section class="info">
+      <h2>For at booke tid, ring til stylisten på </h2>
+      <h2 class="tlf">41363636</h2>
+    </section>
 <section class="priser">
   <h3 id="konfoverskrift"> Prøvesessioner for konfirmanden</h3>
   <section class="konfsek1">
@@ -237,10 +240,6 @@
 	</div>
 
 	
-	
-	
-	
-<p class="mereinfo"> Er du interesseret i at se flere billeder fra MyStylist. Så gå ind og følg med på vores <a class="link" href="https://www.instagram.com/mystylist/?hl=en">Instagram</a>, og/eller på vores <a class="link" href="https://www.facebook.com/myStylist.stylist">facebook</a> side. </p>
 </div>
 </main>
 <footer>
