--- a/voks.html
+++ b/voks.html
@@ -139,9 +139,11 @@
 		 
 			
 		 </section>
-		  
+		  <section class="booksec">
+			 <a class="bookknap" href="#">Book her</a>
+		  </section>
 
-	
+	</section>
 	</div>
 	
 </main>
