--- a/shop.html
+++ b/shop.html
@@ -67,7 +67,7 @@
 	<div class="wrapper">
 	
 		   <section class=hero>
-		<img class="heroimg" src="billeder/kropsbehandlinger.png" alt="shop billede">
+		<img class="heroimg" src="billeder/shop.png" alt="shop billede">
 		<article class="overlay"></article>
 		<aricle class="herotxt" >
 			<h1>Shop</h1>
